<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvDebutEXplanationStep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/sicilian_Defence"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/main_color"
        android:layout_marginVertical="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/backStepButton"
        app:layout_constraintEnd_toEndOf="@id/tvDebutEXplanationStep"
        app:layout_constraintStart_toStartOf="@id/tvDebutEXplanationStep"
        app:layout_constraintTop_toBottomOf="@id/tvDebutEXplanationStep">

        <ImageView
            android:id="@+id/imgDebut"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextStepButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="12dp"
        android:foregroundTint="@color/main_color"
        android:paddingHorizontal="12dp"
        android:text="@string/next_step"
        android:theme="@style/MainButton"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="end"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:tint="@color/main_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backStepButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="12dp"
        android:paddingHorizontal="12dp"
        android:text="@string/back"
        android:theme="@style/MainButton"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/cardView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
